fix dark mode follows you (#1863)

--- a/audius-client/packages/web/src/components/artist/ArtistChip.module.css
+++ b/audius-client/packages/web/src/components/artist/ArtistChip.module.css
@@ -109,6 +109,13 @@
   color: var(--neutral-light-4);
 }
 
+.followersContainer .followsYou.darkMode {
+  box-shadow: none;
+  border: 1px solid var(--neutral-light-4);
+  color: var(--neutral-light-4);
+  background: none;
+}
+
 .tipContainer .rank {
   margin-right: 24px;
 }
